[SP-6636] Backporting PPP-4892 to 10.2

--- a/shims/emr700/driver/pom.xml
+++ b/shims/emr700/driver/pom.xml
@@ -585,7 +585,7 @@
               </include>
               <exclude>
                 *:*log4j*,*:xml-apis,*:xercesImpl,*:commons-logging,*:commons-math3,*:commons-pool2,*:commons-dbcp2,
-                *:avatica,*:janino,*:dnsjava,*:slf4j-log4j12,*:slf4j-api
+                *:avatica,*:janino,*:dnsjava,*:slf4j-log4j12,*:slf4j-api,org.apache.velocity:velocity
               </exclude>
               <transitive>true</transitive>
             </resolverFilter>
