[PPP-4892] removing the velocity library dependency from all the shims that has velocity as transitive dependency

--- a/shims/dataproc1421/driver/pom.xml
+++ b/shims/dataproc1421/driver/pom.xml
@@ -450,7 +450,7 @@
               </include>
               <exclude>
                 *:*log4j*,*:xml-apis,*:xercesImpl,*:commons-logging,*:commons-math3,*:commons-pool2,*:commons-dbcp2,
-                *:jersey-guava,*:janino
+                *:jersey-guava,*:janino,org.apache.velocity:velocity
               </exclude>
               <transitive>true</transitive>
             </resolverFilter>
