--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -313,7 +313,7 @@
                 *:jersey*:jar:2.25.1,
                 *:*log4j*,*:xml-apis,*:xercesImpl,*:tests:*,
                 <!--Needed for hive-->
-                org.apache.hadoop:hadoop-yarn-registry
+                org.apache.hadoop:hadoop-yarn-registry,org.apache.velocity:velocity
               </exclude>
               <transitive>true</transitive>
             </resolverFilter>
