--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -27,7 +27,7 @@
     <commons-configuration.version>1.6</commons-configuration.version>
     <commons-configuration2.version>2.10.1</commons-configuration2.version>
     <org.apache.hadoop.version>3.3.0</org.apache.hadoop.version>
-    <org.apache.orc.version>1.6.1</org.apache.orc.version>
+    <org.apache.orc.version>1.6.1</org.apache.orc.version> <!-- TODO update me -->
     <parquet.version>1.11.1</parquet.version>
     <joda-time.version>2.9.9</joda-time.version>
     <org.apache.thrift.version>0.9.3</org.apache.thrift.version>
@@ -168,7 +168,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.orc</groupId>
-      <artifactId>orc-core</artifactId>
+      <artifactId>orc-core</artifactId> <!-- TODO must be updated -->
       <version>${org.apache.orc.version}</version>
     </dependency>
     <dependency>
