--- a/shims/apachevanilla/driver/pom.xml
+++ b/shims/apachevanilla/driver/pom.xml
@@ -17,7 +17,7 @@
     <failureaccess.version>1.0.1</failureaccess.version>
     <pentaho-osgi-bundles.version>10.3.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
     <org.apache.avro.version>1.8.2.7.1.4.0-203</org.apache.avro.version>
-    <org.apache.orc.version>1.5.1.7.1.4.0-203</org.apache.orc.version>
+    <org.apache.orc.version>1.5.1.7.1.4.0-203</org.apache.orc.version>  <!-- TODO update me -->
     <parquet.version>1.10.99.7.1.4.0-203</parquet.version>
     <org.apache.hadoop.version>3.1.1.7.1.4.0-203</org.apache.hadoop.version>
     <org.apache.hbase.version>2.2.3.7.1.4.0-203</org.apache.hbase.version>
@@ -320,7 +320,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.orc</groupId>
-      <artifactId>orc-core</artifactId>
+      <artifactId>orc-core</artifactId> <!-- TODO must be updated -->
       <version>${org.apache.orc.version}</version>
       <exclusions>
         <exclusion>
