--- a/shims/dataproc1421/pom.xml
+++ b/shims/dataproc1421/pom.xml
@@ -41,7 +41,7 @@
     <geronimo-servlet_3.0_spec.version>1.0</geronimo-servlet_3.0_spec.version>
     <org.apache.hive.version>2.3.6</org.apache.hive.version>
     <org.apache.hadoop.version>2.9.2</org.apache.hadoop.version>
-    <org.apache.orc.version>1.3.4</org.apache.orc.version>
+    <org.apache.orc.version>1.3.4</org.apache.orc.version> <!-- //TODO update me -->
     <parquet.version>1.10.1</parquet.version>
     <org.antlr.version>3.5.2</org.antlr.version>
     <joda-time.version>2.9.9</joda-time.version>
