--- a/shims/emr700/driver/pom.xml
+++ b/shims/emr700/driver/pom.xml
@@ -18,7 +18,7 @@
     <org.apache.oozie.version>5.2.1</org.apache.oozie.version>
     <org.apache.hbase.version>2.4.17</org.apache.hbase.version>
     <org.apache.hadoop.version>3.3.6</org.apache.hadoop.version>
-    <org.apache.orc.version>2.0.0</org.apache.orc.version>
+    <org.apache.orc.version>2.0.0</org.apache.orc.version>  <!-- TODO update me -->
     <sqoop.version>1.4.7</sqoop.version>
     <pig.version>0.17.0</pig.version>
     <pentaho-code.version>11.0.0.0</pentaho-code.version>
@@ -120,7 +120,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.orc</groupId>
-      <artifactId>orc-core</artifactId>
+      <artifactId>orc-core</artifactId>  <!-- TODO must be updated -->
       <version>${org.apache.orc.version}</version>
       <exclusions>
         <exclusion>
