[PPP-5113] added transitive aircompressor dependency to shim bunlde

--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -330,7 +330,7 @@
             </resolverFilter>
             <resolverFilter>
               <include>
-                *:libthrift,
+                *:libthrift,*:aircompressor
               </include>
               <exclude>
                 *:tests:*
