--- a/shims/hdi40/driver/pom.xml
+++ b/shims/hdi40/driver/pom.xml
@@ -29,7 +29,7 @@
     <pentaho-code.version>11.0.0.0</pentaho-code.version>
     <joda-time.version>2.10</joda-time.version>
     <jython.version>2.5.3</jython.version>
-    <jetty.version>9.3.20.v20170531</jetty.version>
+    <jetty.version>9.4.52.v20230823</jetty.version>
     <commons-configuration2.version>2.10.1</commons-configuration2.version>
   </properties>
 
@@ -113,7 +113,7 @@
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-server</artifactId>
-        <version>${jetty-server.version}</version>
+        <version>${jetty.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
