--- a/shims/apachevanilla/pmr/pom.xml
+++ b/shims/apachevanilla/pmr/pom.xml
@@ -14,7 +14,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <org.apache.hbase.version>2.2.3.7.1.3.0-100</org.apache.hbase.version>
+    <org.apache.hbase.version>2.6.0</org.apache.hbase.version>
   </properties>
   <dependencies>
     <dependency>
